# pageshrink

./: README.md  __init__.py  __main__.py  pageshrink.py  pyproject.toml  requirements.txt
pageshrink/: __init__.py  cli.py  pageshrink.py
