[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pageshrink"
description = "Shrinks the region polygons of PageXML files to its content."
readme = "README.md"
keywords = []
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dynamic = ["dependencies", "version"]
authors = [
    { name = "Janik Haitz", email = "jahtz.dev@proton.me" },
    { name = "Centre for Philology and Digitality (ZPD), University of Würzburg" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://www.uni-wuerzburg.de/zpd/forschungsstelle-dachs/"
Repository = "https://github.com/jahtz/pageshrink"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "pageshrink.__version__" }

[project.scripts]
pageshrink = "pageshrink.cli:main"
